--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -13,16 +13,77 @@
     justify-content: space-between;
 }
 
+.logo-container{
+    color: white;
+}
+
 .buttons-container{
     width: 20%;
 }
 
-.shortlist p, .contact p{
-    padding-left: 8px;
-}
-
 .logo-container img{
     padding-left: 10px;
+}
+
+button{
+    background: none;
+    border: none;
+    color: white;
+    padding-left: 8px;
+    cursor: pointer;
+}
+
+form{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
+}
+
+.modal-left{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin-right: 80px;
+}
+
+.modal-right{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+
+.submit{
+    border-radius: 12px;
+    background: #3A5295;
+    color: white;
+    font-weight: 600;
+    width: 100%;
+    border: none;
+    font-size: 20px;
+    padding: 10px 30px;
+    margin-top: 25px;
+}
+
+.modal-header{
+    display: flex;
+    justify-content: space-between;
+}
+
+.modal-header img{
+    width: 88px;
+    align-self: flex-end;
+}
+
+.modal-header-text p{
+    margin-top: 30px;
+}
+
+input, textarea, select{
+    border-radius: 12px;
+    border: 1px solid #CED3D8;
+    background: #FFF;
+    padding: 10px;
+    margin-top: 5px;
 }
 
 
